# btl-myturn-scraper

./: .env.example  .gitignore  config.py  example.html  makefile  pyproject.toml  readme.md  run.py
src/: config.py  lambda_function.py  run.py  scraper.py
