[tool.poetry]
name = "btl-myturn-scraper"
version = "0.1.0"
description = ""
authors = ["Henry Singleton <henry@henrysingleton.com>"]
readme = "README.md"
packages = [{include = "btl_myturn_scraper"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

